# TFHE-tool

./: CMakeLists.txt  Doxyfile  README.md
latex/: alice__array_8cpp.tex  alice__array_8cpp__incl.md5  alice__bool_8cpp.tex  alice__bool_8cpp__incl.md5  alice__integer_8cpp.tex  alice__integer_8cpp__incl.md5  annotated.tex  array_8hpp.tex  array_8hpp__dep__incl.md5  array_8hpp__incl.md5  bit_8cpp.tex  bit_8cpp__incl.md5  bit_8hpp.tex  bit_8hpp__dep__incl.md5  bit_8hpp__incl.md5  bits_8cpp.tex  bits_8cpp__incl.md5  bits_8hpp.tex  bits_8hpp__dep__incl.md5  bits_8hpp__incl.md5  bool_8cpp.tex  bool_8cpp__incl.md5  bool_8hpp.tex  bool_8hpp__dep__incl.md5  bool_8hpp__incl.md5  bool__core_8cpp.tex  bool__core_8cpp__incl.md5  bool__core_8hpp.tex  bool__core_8hpp__dep__incl.md5  bool__core_8hpp__incl.md5  classTFHEArray.tex  classTFHEArray__coll__graph.md5  classTFHEBit.tex  classTFHEBit__coll__graph.md5  classTFHEBits.tex  classTFHEBits__inherit__graph.md5  classTFHEBool.tex  classTFHEBoolCore.tex  classTFHEBoolCore__coll__graph.md5  classTFHEBoolCore__inherit__graph.md5  (+206 more)
nightly/src/include/: tfhe_libex.hpp
nightly/src/include/type/core/: float_core.hpp
nightly/src/include/type/float/: float.hpp  float16.hpp  float32.hpp
nightly/src/lib/type/: CMakeLists.txt
nightly/src/lib/type/core/: CMakeLists.txt  float_core.cpp
nightly/src/lib/type/float/: CMakeLists.txt  float16.cpp  float32.cpp
nightly/src/test/: CMakeLists.txt
nightly/src/test/float/: CMakeLists.txt  test_float_add.cpp
public/: alice__array_8cpp.html  alice__array_8cpp__incl.map  alice__array_8cpp__incl.md5  alice__bool_8cpp.html  alice__bool_8cpp__incl.map  alice__bool_8cpp__incl.md5  alice__integer_8cpp.html  alice__integer_8cpp__incl.map  alice__integer_8cpp__incl.md5  annotated.html  array_8hpp.html  array_8hpp__dep__incl.map  array_8hpp__dep__incl.md5  array_8hpp__incl.map  array_8hpp__incl.md5  array_8hpp_source.html  bit_8cpp.html  bit_8cpp__incl.map  bit_8cpp__incl.md5  bit_8hpp.html  bit_8hpp__dep__incl.map  bit_8hpp__dep__incl.md5  bit_8hpp__incl.map  bit_8hpp__incl.md5  bit_8hpp_source.html  bits_8cpp.html  bits_8cpp__incl.map  bits_8cpp__incl.md5  bits_8hpp.html  bits_8hpp__dep__incl.map  bits_8hpp__dep__incl.md5  bits_8hpp__incl.map  bits_8hpp__incl.md5  bits_8hpp_source.html  bool_8cpp.html  bool_8cpp__incl.map  bool_8cpp__incl.md5  bool_8hpp.html  bool_8hpp__dep__incl.map  bool_8hpp__dep__incl.md5  (+565 more)
public/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.html  files_4.js  files_5.html  files_5.js  files_6.html  files_6.js  files_7.html  files_7.js  files_8.html  files_8.js  files_9.html  files_9.js  files_a.html  files_a.js  functions_0.js  functions_1.js  functions_2.js  (+8 more)
src/: CMakeLists.txt
src/include/: tfhe_libex.hpp
src/include/common/: common.hpp  std.hpp  tfhe_lib.hpp
src/include/operations/io/: io.hpp
src/include/type/: type.hpp
src/include/type/array/: array.hpp
src/include/type/bool/: bool.hpp
src/include/type/config/: config.hpp
src/include/type/core/: bool_core.hpp  integer_core.hpp
src/include/type/integer/: int16.hpp  int32.hpp  int8.hpp  integer.hpp
src/include/type/keyset/: keyset.hpp
src/include/type/raw/: bit.hpp  bits.hpp
src/lib/: CMakeLists.txt
src/lib/operations/: CMakeLists.txt
src/lib/operations/arithmetic/: CMakeLists.txt
src/lib/operations/arithmetic/utils/: CMakeLists.txt  full_adder.cpp  half_adder.cpp
src/lib/operations/io/: CMakeLists.txt  io.cpp
src/lib/type/: CMakeLists.txt
src/lib/type/bool/: CMakeLists.txt  bool.cpp
src/lib/type/config/: CMakeLists.txt  config.cpp
src/lib/type/core/: CMakeLists.txt  bool_core.cpp  integer_core.cpp
src/lib/type/integer/: CMakeLists.txt  int16.cpp  int32.cpp  int8.cpp
src/lib/type/keyset/: CMakeLists.txt  keyset.cpp
src/lib/type/raw/: CMakeLists.txt  bit.cpp  bits.cpp
src/test/: CMakeLists.txt  time.cpp  utils.hpp
src/test/array/: CMakeLists.txt  alice_array.cpp  cloud_bitonic_mergesort.cpp  cloud_oem_sort.cpp  verif_array.cpp
src/test/bool/: CMakeLists.txt  alice_bool.cpp  cloud_and.cpp  cloud_mux_bool.cpp  cloud_not.cpp  cloud_or.cpp  cloud_xor.cpp  verif_bool.cpp
src/test/integer/: CMakeLists.txt  alice_integer.cpp  cloud_abs.cpp  cloud_add.cpp  cloud_div.cpp  cloud_equal_to.cpp  cloud_less_than.cpp  cloud_minus.cpp  cloud_mod.cpp  cloud_mul.cpp  cloud_mux_integer.cpp  cloud_sign.cpp  cloud_sub.cpp  test_error_check.cpp  verif_bool_integer.cpp  verif_integer.cpp
(+3 files in other folders)
